--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,16 @@ services:
   user:
     image: node:14-alpine3.11
     working_dir: /app
+    env_file: .env
     volumes:
-      - ./user:/app
+      - ./user-api:/app
     ports:
       - 3000:3000
-    # command: sh -c "npm i && npm run dev"
+    command: sh -c "npm i && npm run dev"
     stdin_open: true
+
+  mongo:
+    image: mongo
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
