Converted user api to sequelize

--- a/.env
+++ b/.env
@@ -1,12 +1,11 @@
 DB_USER=root
 DB_PASSWORD=example
-DB_URL=mongodb://root:example@mongo:27017/
+PG_URI=postgres://root:example@postgres:5432/test
 
 HOST=0.0.0.0
 PORT=3000
 SECRET='my-super-secret'
-MONGO_URI=mongodb://root:example@mongo:27017/
-MONGO_URI_TEST=mongodb://root:example@mongo:27017/
+MONGO_URI=mongodb://root:example@mongo:27017/test
 HASH=10
 JWT_KEY='your-jwt-key'
 #JWT_PRIVATE_SECRET='jwt-private-secret'
