--- a/user-api/package.json
+++ b/user-api/package.json
@@ -39,15 +39,13 @@
     "clean": "rimraf build",
     "transpile": "babel src --out-dir build",
     "server": "node ./build/bin/www",
-    "dev": "cross-env NODE_ENV=development nodemon --exec babel-node src/bin/www",
+    "dev": "cross-env NODE_ENV=development DEBUG=dev nodemon --exec babel-node src/bin/www",
     "lint": "eslint -c './.eslintrc' --ignore-path .gitignore --ext .js .",
     "lint-and-fix": "eslint --ignore-path .gitignore --ext .js --fix .",
     "lint-all": "eslint .",
     "test": "cross-env NODE_ENV=test jest --verbose"
   },
   "dependencies": {
-    "@google-cloud/pubsub": "^2.17.0",
-    "@sendgrid/mail": "^7.4.6",
     "axios": "^0.21.4",
     "bcryptjs": "^2.4.3",
     "clean-deep": "^3.4.0",
@@ -60,25 +58,19 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
-    "express-mongo-sanitize": "^2.1.0",
     "express-session": "^1.17.2",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongodb": "^4.1.2",
-    "mongoose": "^6.0.6",
-    "mongoose-slug-generator": "^1.0.4",
-    "mongoose-type-url": "^2.1.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.3",
-    "multer-cloud-storage": "^2.8.0",
     "npm-run-all": "^4.1.5",
     "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
     "regenerator-runtime": "^0.13.9",
+    "sequelize": "^6.6.5",
     "slugify": "^1.6.0",
     "swagger-ui-express": "^4.1.6",
     "validator": "^13.6.0",
