--- a/product-api/.env.example
+++ b/product-api/.env.example
@@ -1,11 +1,8 @@
-DB_USER=root
-DB_PASSWORD=example
-PG_URI=postgres://root:example@postgres:5432/test
-
 HOST=0.0.0.0
 PORT=3000
 SECRET='my-super-secret'
-MONGO_URI=mongodb://root:example@mongo:27017/
+MONGO_URI='your-connection-uri-to-mongodb-instance'
+MONGO_URI_TEST='your-connection-uri-to-mongodb-test-instance'
 HASH=10
 JWT_KEY='your-jwt-key'
 #JWT_PRIVATE_SECRET='jwt-private-secret'
