Added payment api, copy of product api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,17 @@ services:
     command: sh -c "npm i && npm run dev"
     stdin_open: true
 
+  payment:
+    image: node:14-alpine3.11
+    working_dir: /app
+    env_file: .env
+    volumes:
+      - ./payment-api:/app
+    ports:
+      - 3002:3000
+    command: sh -c "npm i && npm run dev"
+    stdin_open: true
+
   mongo:
     image: mongo
     environment:
