fully functionnal env

--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ HASH=10
 JWT_KEY='your-jwt-key'
 #JWT_PRIVATE_SECRET='jwt-private-secret'
 #JWT_PUBLIC_SECRET='jwt-public-secret'
+
+PRODUCT_API_URL=http://product:3000/api/v1/
+USER_API_URL=http://user:3000/api/v1/
