--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_USER=root
 DB_PASSWORD=example
-PG_URI=postgres://root:example@postgres:5432/test
+PG_URI=postgres://root:example@postgres:5432/
 
 HOST=0.0.0.0
 PORT=3000
