--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     ports:
       - 3000:3000
     command: sh -c "npm i && npm run dev"
+    depends_on: 
+      - postgres
 
   product:
     image: node:14-alpine3.11
@@ -20,6 +22,8 @@ services:
     ports:
       - 3001:3000
     command: sh -c "npm i && npm run dev"
+    depends_on: 
+      - mongo
 
   payment:
     image: node:14-alpine3.11
@@ -30,6 +34,8 @@ services:
     ports:
       - 3002:3000
     command: sh -c "npm i && npm run dev"
+    depends_on: 
+      - mongo
 
   mongo:
     image: mongo
