added payment creator microservice

--- a/.env
+++ b/.env
@@ -11,5 +11,8 @@ JWT_KEY='your-jwt-key'
 #JWT_PRIVATE_SECRET='jwt-private-secret'
 #JWT_PUBLIC_SECRET='jwt-public-secret'
 
-PRODUCT_API_URL=http://product:3000/api/v1/
+REDIS_URI=redis://redis:6379/
+
+PAYMENT_API_URL=http://payment:3000/api/v1/payments
+PRODUCT_API_URL=http://product:3000/api/v1/products
 USER_API_URL=http://user:3000/api/v1/
