--- a/payment-creator/package.json
+++ b/payment-creator/package.json
@@ -62,7 +62,7 @@
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "npm-run-all": "^4.1.5",
-    "redis": "^3.1.2",
+    "redis": "^4.0.0-rc.3",
     "regenerator-runtime": "^0.13.9",
     "slugify": "^1.6.0",
     "swagger-ui-express": "^4.1.6",
